--- a/index.html
+++ b/index.html
@@ -489,6 +489,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Current and Selected Work/Current Work/RPG Longsight-RPG Longsight (Foundation CIO)--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-How To Do Things With Rules--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Organisational Practice-Global Ethnic Majorities Board Association--118161433</li>
@@ -636,6 +638,8 @@ Error message and password prompt
 <li>agree ... but</li>
 
 <li>Anna Tsing</li>
+
+<li>Art School Surgery</li>
 
 <li>artist resources</li>
 
@@ -13418,7 +13422,7 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220627162844427" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<div created="20220513065309542" modified="20220629142349326" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13589,7 +13593,7 @@ exports.context = contextWidget;
 <div created="20220513080643746" modified="20220627162837297" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513065839196" modified="20220616124744406" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
+<div created="20220513065839196" modified="20220629142348202" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20220612184053188" modified="20220612184905785" title="$:/state/toc/TableOfContents/Current and Selected Work/Current Work-Island Life--118161433">
@@ -13600,6 +13604,9 @@ exports.context = contextWidget;
 </div>
 <div created="20220621132123393" modified="20220621135634098" title="$:/state/toc/TableOfContents/Current and Selected Work/Current Work/RPG Longsight-RPG Longsight (Foundation CIO)--118161433">
 <pre>open</pre>
+</div>
+<div created="20220629141228049" modified="20220629141228987" title="$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-How To Do Things With Rules--118161433">
+<pre>close</pre>
 </div>
 <div created="20210926070707157" modified="20211005145317550" title="$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433">
 <pre>close</pre>
@@ -13721,7 +13728,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220627161106938" list="[[Current Work]]" modified="20220627165353724" title="$:/StoryList">
+<div created="20220629140809093" list="[[Current Work]]" modified="20220629141411958" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14107,6 +14114,19 @@ Practically this means that artists are working for free. However, the violence 
 <div created="20220616091903611" modified="20220616105622882" tags="[[My Cloud]] economics [[new materialism]] [[more than human]] [[to do]]" title="Anna Tsing">
 <pre></pre>
 </div>
+<div created="20220629141341036" modified="20220629142321291" tags="[[How To Do Things With Rules]] Performances" title="Art School Surgery">
+<pre>Art School Surgery (2015) is a one-to-one discussion with the artist about how Sister Corita’s Rules applies (or not) to a person’s professional life. Art School Surgery took the form of a 30 minute life coaching sessions which members of the public would book in advance. 
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Art%20School%20Surgery%202015%20-%20Jack%20Ky%20Tan%20-%20ICA%20Singapore%20007sm.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Art%20School%20Surgery%202015%20-%20Jack%20Ky%20Tan%20-%20ICA%20Singapore%20009sm.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Art%20School%20Surgery%202015%20-%20Jack%20Ky%20Tan%20-%20ICA%20Singapore%20013sm.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Art%20School%20Surgery%202015%20-%20Jack%20Ky%20Tan%20-%20ICA%20Singapore%20050sm.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Art%20School%20Surgery%202015%20-%20Jack%20Ky%20Tan%20-%20ICA%20Singapore%20051sm.jpg?raw=true]]</pre>
+</div>
 <div created="20220208153617453" modified="20220208153645940" tags="Resources" title="artist resources">
 <pre></pre>
 </div>
@@ -14414,7 +14434,7 @@ When people want to think differently they actually have to use a) a different a
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20220226114351546" modified="20220226120532081" tags="Installation" title="Conference">
+<div created="20220226114351546" modified="20220629142053674" tags="Installation [[How To Do Things With Rules]]" title="Conference">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20-%20Conference%20Table.jpg?raw=true]]
 
 ''Conference (2015)'' is a bookable conference table situated within the Earl Lu Gallery of the Institute of Contemporary Art Singapore. The conference table is available free for use by staff and students of the Lasalle College of Arts and by local businesses for the duration of the exhibition. It exists as an installation and when in use for meetings, as a live sculpture. The work also contains 3 ceramic decision-making aids that may be of service to users during their meetings:
@@ -15038,7 +15058,7 @@ To help you navigate, you can see your open tiddlers listed in the 'Open' column
 
 You are very welcome to look around and explore. But bear in mind that like many artists' studios, things get messier (and hopefully more interesting) the deeper you go!</pre>
 </div>
-<div created="20210925114816139" modified="20220513091316274" tags="[[Selected Work]] 2015" title="How To Do Things With Rules">
+<div created="20210925114816139" modified="20220629141328225" tags="[[Selected Work]] 2015 Installation" title="How To Do Things With Rules">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Visitor-Service-Officer_33.jpg?raw=true]]
 
 ''Exhibition opening reception: Wednesday 12 August at 6.30 pm''
@@ -15060,13 +15080,13 @@ For his first major solo exhibition, London-based Singaporean artist Jack Tan (b
 
 [[Karaoke Court]] (2013–ongoing): an interactive performance installation and method of legal arbitration developed with staff and students at LASALLE College of the Arts and the local community. The installation includes a functioning Court office, library and meeting areas.
 
-''Conference'' (2015): a bookable conference table for the duration of the exhibition that presents 3 decision-making sculptures for use during meetings:
+[[Conference]] (2015): a bookable conference table for the duration of the exhibition that presents 3 decision-making sculptures for use during meetings:
 
 * ''Decision Pong'' (2015) comprises a ping-pong ball and set of ceramic cups  with decisions labelled on each one. A decision is made by throwing the ball and seeing which up it lands in.
 * ''Conch'' (2015) can be used to impose a rule of turn-taking during meetings whereby the person holding the conch has the right to speak.
 * ''Ballot box'' (2015) is a tool for taking secret votes during meetings. Instead of the usual metal box, this ballot box take the form of a tactile burnished ceramic pod.
 
-''Art School Surgery'' (2015) is a one-to-one discussion with the artist about how Sister Corita’s Rules applies or not to a person’s professional life. //Art School Surgery// takes the form of a 30 minute life coaching sessions.
+[[Art School Surgery]] (2015) is a one-to-one discussion with the artist about how Sister Corita’s Rules applies or not to a person’s professional life. //Art School Surgery// takes the form of a 30 minute life coaching sessions.
 
 ''Visitor Service Officer'' (2015) highlights the rules and duties of gallery invigilators, and how their behaviour affects visitors. In this work, the artist creatively interprets the official job description of the ICA Singapore’s ‘Visitor Service Officer’, and asks to them to  performs various tasks as part of their daily work in the gallery.
 
