--- a/index.html
+++ b/index.html
@@ -13398,7 +13398,7 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220627120308719" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20220629143059275" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13422,7 +13422,7 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220629142349326" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<div created="20220513065309542" modified="20220629143533413" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13590,10 +13590,10 @@ exports.context = contextWidget;
 <div created="20210925122405914" modified="20211029073350913" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513080643746" modified="20220627162837297" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
+<div created="20220513080643746" modified="20220629143402615" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513065839196" modified="20220629142348202" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
+<div created="20220513065839196" modified="20220629143532253" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20220612184053188" modified="20220612184905785" title="$:/state/toc/TableOfContents/Current and Selected Work/Current Work-Island Life--118161433">
@@ -13605,7 +13605,7 @@ exports.context = contextWidget;
 <div created="20220621132123393" modified="20220621135634098" title="$:/state/toc/TableOfContents/Current and Selected Work/Current Work/RPG Longsight-RPG Longsight (Foundation CIO)--118161433">
 <pre>open</pre>
 </div>
-<div created="20220629141228049" modified="20220629141228987" title="$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-How To Do Things With Rules--118161433">
+<div created="20220629141228049" modified="20220629143530695" title="$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-How To Do Things With Rules--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926070707157" modified="20211005145317550" title="$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433">
@@ -13728,7 +13728,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220629140809093" list="[[Current Work]]" modified="20220629141411958" title="$:/StoryList">
+<div created="20220629142959756" list="" modified="20220629143406607" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14114,8 +14114,10 @@ Practically this means that artists are working for free. However, the violence 
 <div created="20220616091903611" modified="20220616105622882" tags="[[My Cloud]] economics [[new materialism]] [[more than human]] [[to do]]" title="Anna Tsing">
 <pre></pre>
 </div>
-<div created="20220629141341036" modified="20220629142321291" tags="[[How To Do Things With Rules]] Performances" title="Art School Surgery">
+<div created="20220629141341036" modified="20220629143451472" tags="[[How To Do Things With Rules]] Performances" title="Art School Surgery">
 <pre>Art School Surgery (2015) is a one-to-one discussion with the artist about how Sister Corita’s Rules applies (or not) to a person’s professional life. Art School Surgery took the form of a 30 minute life coaching sessions which members of the public would book in advance. 
+
+Art School Surgery (2015) was part of Jack Ky Tan's solo exhibition [[How To Do Things With Rules]] at the ICA Singapore, 2015. Curated by Melanie Pocock.
 
 [img[https://github.com/jackkytan/websiteimages/blob/master/Art%20School%20Surgery%202015%20-%20Jack%20Ky%20Tan%20-%20ICA%20Singapore%20007sm.jpg?raw=true]]
 
@@ -14125,7 +14127,9 @@ Practically this means that artists are working for free. However, the violence 
 
 [img[https://github.com/jackkytan/websiteimages/blob/master/Art%20School%20Surgery%202015%20-%20Jack%20Ky%20Tan%20-%20ICA%20Singapore%20050sm.jpg?raw=true]]
 
-[img[https://github.com/jackkytan/websiteimages/blob/master/Art%20School%20Surgery%202015%20-%20Jack%20Ky%20Tan%20-%20ICA%20Singapore%20051sm.jpg?raw=true]]</pre>
+[img[https://github.com/jackkytan/websiteimages/blob/master/Art%20School%20Surgery%202015%20-%20Jack%20Ky%20Tan%20-%20ICA%20Singapore%20051sm.jpg?raw=true]]
+
+&lt;br&gt;^^Credit for images: Tan, Jack Ky. 'Art School Surgery' part of //How To Do Things With Rules//, 2015. Institute of Contemporary Arts Singapore.^^</pre>
 </div>
 <div created="20220208153617453" modified="20220208153645940" tags="Resources" title="artist resources">
 <pre></pre>
@@ -14434,7 +14438,7 @@ When people want to think differently they actually have to use a) a different a
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20220226114351546" modified="20220629142053674" tags="Installation [[How To Do Things With Rules]]" title="Conference">
+<div created="20220226114351546" modified="20220629143509748" tags="Installation [[How To Do Things With Rules]]" title="Conference">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20-%20Conference%20Table.jpg?raw=true]]
 
 ''Conference (2015)'' is a bookable conference table situated within the Earl Lu Gallery of the Institute of Contemporary Art Singapore. The conference table is available free for use by staff and students of the Lasalle College of Arts and by local businesses for the duration of the exhibition. It exists as an installation and when in use for meetings, as a live sculpture. The work also contains 3 ceramic decision-making aids that may be of service to users during their meetings:
@@ -14442,6 +14446,8 @@ When people want to think differently they actually have to use a) a different a
 *''Decision Pong (2015)'' comprises a ping-pong ball and set of ceramic cups  with decisions labelled on each one. A decision is made by throwing the ball and seeing which up it lands in. The work offers committees to incorporate chance into their decision making.
 *''Conch (2015)'' can be used to impose a rule of turn-taking during meetings whereby the person holding the conch has the right to speak. It is a reminder of good meeting etiquette.
 *''Ballot box (2015)'' is a tool for taking secret votes during meetings. Instead of the usual metal box with sharp edges, this ballot box takes the form of a tactile burnished ceramic pod. Hopefully this object also softens the edges of votes to be less adversarial, making voting less situated in the sphere of rights and turning them more into wishes and hopes.
+
+Conference (2015) was part of Jack Ky Tan's solo exhibition [[How To Do Things With Rules]] at the ICA Singapore, 2015. Curated by Melanie Pocock.
 
 [img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20055_sm.jpg?raw=true]]
 
@@ -14459,7 +14465,7 @@ When people want to think differently they actually have to use a) a different a
 
 [img[https://github.com/jackkytan/websiteimages/blob/master/Conference%20(2015)%20Jack%20Tan%20ICA-Singapore%20025_sm.jpg?raw=true]]
 
-Conference (2015) is part of Jack Ky Tan's solo exhibition ''How To Do Things With Rules'' at the ICA Singapore, 2015. Curated by Melanie Pocock.</pre>
+&lt;br&gt;^^Credit for images: Tan, Jack Ky. 'Conference' part of //How To Do Things With Rules//, 2015. Institute of Contemporary Arts Singapore.^^</pre>
 </div>
 <div created="20211214094057199" modified="20211214094115887" tags="[[Projects by type]]" title="Consulting">
 <pre></pre>
@@ -16663,7 +16669,7 @@ In this final section of my talk, I want to share my own experiments with govern
 I don’t know whether this way of experimenting will lead to insights on a new arts ecology, or if these yet realise the methodologies of critical asianness, intra-active world-making, more-than-human interconnectedness and queer futurity. But as an artist, the only way I know is by doing and trying it out, and I would encourage you to also try and do, in your own ways.
 </pre>
 </div>
-<div created="20220208153655156" modified="20220608125839970" tags="[[artist resources]] [[Organisational Change]] [[Current Work]]" title="Sample artist contract">
+<div created="20220208153655156" modified="20220629143118100" tags="[[artist resources]] [[Organisational Change]] [[Current Work]]" title="Sample artist contract">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/FACT%20sample%20contract.jpg]]
 &lt;br&gt;^^ Image: Tan, Jack Ky. 'Dyslexia-friendly and Easier-to-read artist contract' part of //FACT Liverpool Board Artist's Residency//, 2022. FACT Liverpool. https://www.fact.co.uk/resources/2022/03/easy-read-artist-contract^^
 
