--- a/index.html
+++ b/index.html
@@ -13460,8 +13460,8 @@ exports.context = contextWidget;
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20211209081213628" modified="20220701151408748" title="$:/state/toc/TableOfContents-About--118161433">
-<pre>close</pre>
+<div created="20211209081213628" modified="20220706085803024" title="$:/state/toc/TableOfContents-About--118161433">
+<pre>open</pre>
 </div>
 <div created="20220513071259660" modified="20220702083316047" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
 <pre>close</pre>
@@ -13820,7 +13820,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220702083451345" list="" modified="20220702083504917" title="$:/StoryList">
+<div created="20220706085803998" list="" modified="20220706090649824" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14562,8 +14562,8 @@ Conference (2015) was part of Jack Ky Tan's solo exhibition [[How To Do Things W
 <div created="20211214094057199" modified="20211214094115887" tags="[[Projects by type]]" title="Consulting">
 <pre></pre>
 </div>
-<div created="20210925113223427" modified="20211209091020192" tags="About" title="Contact">
-<pre>💌 email me using [[this contact form|https://docs.google.com/forms/d/e/1FAIpQLScbnU-lUYaEJSphpMX5ISEYthm_OfrnWbpy04_dGLpVomu9EA/viewform?usp=sf_link]]
+<div created="20210925113223427" modified="20220706090602213" tags="About" title="Contact">
+<pre>💌 email me using [[this contact form|https://forms.gle/DTYFS42oVvTDHQVW8]]
 
 🙊 follow me on [[instagram|https://www.instagram.com/jackkytan/]] for news on my ongoing practice, and photos of community life/work and what I'm cooking.
 
