--- a/index.html
+++ b/index.html
@@ -11590,8 +11590,9 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 &lt;/$reveal&gt;
 &lt;/div&gt;</pre>
 </div>
-<div bag="default" created="20200106211749103" modified="20220513080600033" revision="0" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki">
-<pre>[[Hello]]
+<div bag="default" created="20200106211749103" modified="20220708070548613" revision="0" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki">
+<pre>[[Contact]]
+[[Hello]]
 [[Current Work]]</pre>
 </div>
 <div created="20210925070021922" modified="20210925070021922" title="$:/GitHub/Branch">
@@ -13449,8 +13450,8 @@ exports.context = contextWidget;
 <div created="20210927072623264" modified="20210927072642624" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20210925061535835" modified="20220627120021849" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210925061535835" modified="20220708070540851" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210925061539666" modified="20220627120128202" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -13458,13 +13459,13 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220702083448902" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20220708070558896" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20211209081213628" modified="20220706093806178" title="$:/state/toc/TableOfContents-About--118161433">
+<div created="20211209081213628" modified="20220708070602119" title="$:/state/toc/TableOfContents-About--118161433">
 <pre>close</pre>
 </div>
 <div created="20220513071259660" modified="20220702083316047" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
@@ -13827,7 +13828,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220706092628460" list="" modified="20220706092709478" title="$:/StoryList">
+<div list="Contact Hello [[Current Work]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14569,8 +14570,10 @@ Conference (2015) was part of Jack Ky Tan's solo exhibition [[How To Do Things W
 <div created="20211214094057199" modified="20211214094115887" tags="[[Projects by type]]" title="Consulting">
 <pre></pre>
 </div>
-<div created="20210925113223427" modified="20220706090602213" tags="About" title="Contact">
-<pre>💌 email me using [[this contact form|https://forms.gle/DTYFS42oVvTDHQVW8]]
+<div created="20210925113223427" modified="20220708074424546" tags="About" title="Contact">
+<pre>|''My email address has changed and is @@color:red;no longer mail@jacktan.net@@. &lt;br&gt;To get in touch, please use the contact form below or DM me.''|
+
+💌 email me using [[this contact form|https://jacktan.wordpress.com/contact/]]
 
 🙊 follow me on [[instagram|https://www.instagram.com/jackkytan/]] for news on my ongoing practice, and photos of community life/work and what I'm cooking.
 
