--- a/index.html
+++ b/index.html
@@ -341,6 +341,8 @@ Error message and password prompt
 
 <li>$:/state/search/currentTab</li>
 
+<li>$:/state/sidebar</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
@@ -408,6 +410,8 @@ Error message and password prompt
 <li>$:/state/toc/TableOfContents-Talks and Workshops--118161433</li>
 
 <li>$:/state/toc/TableOfContents-Talks--118161433</li>
+
+<li>$:/state/toc/TableOfContents-the potting shed--118161433</li>
 
 <li>$:/state/toc/TableOfContents-Themes--118161433</li>
 
@@ -643,6 +647,8 @@ Error message and password prompt
 
 <li>2022-06-21 Mission Vision Values</li>
 
+<li>2022-07-08 True Name</li>
+
 <li>26 Oct 2021 GEMBA Meeting</li>
 
 <li>31 Mar 2021 GEMBA Meeting</li>
@@ -704,6 +710,8 @@ Error message and password prompt
 <li>Contact</li>
 
 <li>Contracts and Art</li>
+
+<li>cosmologies</li>
 
 <li>cosmology</li>
 
@@ -13444,6 +13452,9 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/search/currentTab">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
+<div created="20220708080553605" modified="20220708081245755" title="$:/state/sidebar">
+<pre>yes</pre>
+</div>
 <div created="20210926054606497" modified="20211110081715334" title="$:/state/tab--1963855381">
 <pre>$:/plugins/sq/Stories/settings</pre>
 </div>
@@ -13459,13 +13470,13 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220708070558896" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20220708131641552" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20211209081213628" modified="20220708070602119" title="$:/state/toc/TableOfContents-About--118161433">
+<div created="20211209081213628" modified="20220708084057605" title="$:/state/toc/TableOfContents-About--118161433">
 <pre>close</pre>
 </div>
 <div created="20220513071259660" modified="20220702083316047" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
@@ -13483,7 +13494,7 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220706093803864" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<div created="20220513065309542" modified="20220708131741051" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13546,6 +13557,9 @@ exports.context = contextWidget;
 <div created="20210925123830757" modified="20220513085902952" title="$:/state/toc/TableOfContents-Talks--118161433">
 <pre>open</pre>
 </div>
+<div created="20220708131653652" modified="20220708131742909" title="$:/state/toc/TableOfContents-the potting shed--118161433">
+<pre>close</pre>
+</div>
 <div created="20220223054502133" modified="20220513071356044" title="$:/state/toc/TableOfContents-Themes--118161433">
 <pre>close</pre>
 </div>
@@ -13561,7 +13575,7 @@ exports.context = contextWidget;
 <div created="20211214093344462" modified="20220218073124706" title="$:/state/toc/TableOfContents/About-CV--118161433">
 <pre>open</pre>
 </div>
-<div created="20220613085715978" modified="20220701151407754" title="$:/state/toc/TableOfContents/About-My Cloud--118161433">
+<div created="20220613085715978" modified="20220708080646233" title="$:/state/toc/TableOfContents/About-My Cloud--118161433">
 <pre>close</pre>
 </div>
 <div created="20211214093659779" modified="20211214093659779" title="$:/state/toc/TableOfContents/About/CV-Projects by type--118161433">
@@ -13678,8 +13692,8 @@ exports.context = contextWidget;
 <div created="20220513080643746" modified="20220706093803318" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
 <pre>close</pre>
 </div>
-<div created="20220706092625489" modified="20220706092627919" title="$:/state/toc/TableOfContents/Current and Selected Work-Forthcoming Work--118161433">
-<pre>open</pre>
+<div created="20220706092625489" modified="20220708084101973" title="$:/state/toc/TableOfContents/Current and Selected Work-Forthcoming Work--118161433">
+<pre>close</pre>
 </div>
 <div created="20220630100426988" modified="20220630100430432" title="$:/state/toc/TableOfContents/Current and Selected Work-Recent Work--118161433">
 <pre>close</pre>
@@ -13828,7 +13842,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Contact Hello [[Current Work]]" title="$:/StoryList">
+<div created="20220708084103367" list="Works-in-Progress Contact Hello [[Current Work]]" modified="20220708131519191" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14049,6 +14063,33 @@ Statements, like all words, always fall short of grasping social reality (or ind
 Additionally, if statements can be written in such a way as to elevate words from having fixed meaning to also having poetic meaning, then Mission Vision Value statements can start to sympathetically vibrate with the thing that they are representing.  They can become important organisational text that generates energy, ideas, motivation and inspiration the way that a work of art or poem does: one that is in ongoing conversation with the organisation about accountability and raison d'etre.
 
 - 21 June 2022 (written as part of preparation for [[RPG Longsight Q1: Workshop 1|RPG Longsight Mission Vision Values]]</pre>
+</div>
+<div created="20220708075639069" modified="20220708131651141" tags="Journal [[the potting shed]]" title="2022-07-08 True Name">
+<pre>In a Wizard of Earthsea by [[Ursula K Le Guin]], Ged the wizard travels to meet the Dragon of Pendor to strike a bargain. In the world of Earthsea, there is a rule of names, where if you can learn the true name of a thing or person, you have power over them:
+
+&lt;&lt;&lt;
+&quot;Yet I could help you. You will need help soon, against that which hunts you in the dark . . . What is it that hunts you? Name it to me.&quot;
+
+&quot;If I could name it -- &quot; Ged stopped himself. . .
+
+&quot;If you could name it you could master it, maybe, little wizard . . . Would you like to know its name?&quot;. . . .
+
+&quot;But I did not come here to play, or to be played with. I came to strike a bargain with you.&quot;
+
+Like a sword in sharpness but five times the length of any sword, the point of the dragon's tail arched up scorpion-wise over his mailed back, above the tower. Dryly, he spoke: &quot;I strike no bargains. I take. What have you to offer that I cannot take from you when I like?&quot;
+
+&quot;Safety. Your safety. Swear that you will never fly eastward of Pendor, and I will swear to leave you unharmed. . .
+
+A grating sound came from the dragon's throat . . . &quot;You offer me safety! You threaten me! With what?&quot;
+
+&quot;With your name, Yevaud.&quot;
+
+Ged's voice shook as he spoke the name, yet he spoke it clear and loud. At the sound of it, the old dragon held still, utterly still.
+&lt;&lt;&lt;
+
+When I was young, our relatives or family rarely called us by our names because we believed that wandering spirits might overhear the child's name and take possession or influence over them.
+
+</pre>
 </div>
 <div created="20220218173252662" modified="20220218174101473" tags="[[Global Ethnic Majorities Board Association]]" title="26 Oct 2021 GEMBA Meeting">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/WYWY_GSylvaindeleu_Art14_Jack_Tan_50_smudged_16-9.jpg]]
@@ -14583,6 +14624,19 @@ Conference (2015) was part of Jack Ky Tan's solo exhibition [[How To Do Things W
 </div>
 <div created="20220701112237578" modified="20220701112238682" tags="[[Law and Art]]" title="Contracts and Art">
 <pre></pre>
+</div>
+<div created="20220708085036922" modified="20220708131720026" tags="Concepts [[the potting shed]]" title="cosmologies">
+<pre>
+
+|''Wynter's text, p.271''|''My explanation to myself''|
+|Recent and still ongoing scholarship on archaeo-astronomy has shown that all human orders—from the smallest society of nomadic hunter-gatherers, such as the San people of the Kalahari, to the large-scale societies of Egypt, China, the Greeks, and the Romans—have mapped their “descriptive statements” or governing master codes on the heavens, on their stable periodicities and regular recurring movements (Krupp 1997).|Academic research about how ancient peoples understood the sky and stars has shown that these people created rules, laws and understandings of themselves based on what they observed of the sky because of the regularity they observed in the heavens.|
+|Because, in doing so, they had thereby mapped their specific criterion of being human, of what it was “to be a good man and woman of one’s kind” (Davis 1992), onto the physical cosmos, thereby absolutizing each such criterion;|By doing this, they were closely connecting their idea of what it means to be a good or bad person and what it means to be human, on how the physical universe works. As such, they were making their version of being human universal.|
+|and with this enabling them to be experienced by each order’s subjects as if they had been supernaturally (and, as such, extrahumanly) determined criteria, their respective truths had necessarily come to function as an “objective set of facts” for the people of that society—seeing that such truths were now the indispensable condition of their existence as such a society, as such people, as such a mode of being human.|and this logic enabled them to believe that their version of being human and their version of goodness or badness was an objective, supernatural or divine truth. This way of understanding the world became inseparable from who they were as a people.|
+|These truths had therefore both commanded obedience and necessitated the individual and collective behaviors by means of which each such order and its mode of being human were brought into existence, produced, and stably reproduced.|This truth had a dual effect of requiring adherence to it as well as being the basis of how people's social, philosophical and ethnical reality was created and maintained.|
+|This, therefore, meant that all such knowledges of the physical cosmos, all such astronomies, all such geographies, whatever the vast range of human needs that they had successfully met, the range of behaviors they had made possible—indeed, however sophisticated and complex the calculations that they had enabled to be made of the movements of the heavens (as in the case of Egypt and China)—had still remained adaptive truths-for and, as such, ethno-astronomies, ethno-geographies.'|This kind of knowledge about the cosmos (stars, planets, worlds, space/universe, metaverse?), which includes the good scientific benefits such as navigation/topography, meteorology, etc,  are nonetheless still subjective truths about the universe which we are framing as if they were objective truths for ourselves.|
+
+
+</pre>
 </div>
 <div created="20220616105113301" modified="20220702082814099" tags="Concepts [[the potting shed]]" title="cosmology">
 <pre></pre>
@@ -17644,7 +17698,7 @@ Curated by Amanprit Sandhu</pre>
 <div created="20220223054132753" modified="20220702082955579" tags="[[Current and Selected Work]]" title="Work by year">
 <pre></pre>
 </div>
-<div created="20220630101836703" modified="20220702085131080" tags="[[Current and Selected Work]]" title="Works-in-Progress">
+<div created="20220630101836703" modified="20220708084902539" tags="[[Current and Selected Work]]" title="Works-in-Progress">
 <pre>''Emerging and current areas of study/research that may or may not ever be presented.''
 
 Note: @@color:blue;blue text@@ are links. Other coloured text don't mean anything except to make this page nicer for me to read.
@@ -17667,7 +17721,7 @@ The work of art and litigation was more to do with performance of law as a live 
 
 !!Cosmologies of Clay
 
-I am starting to combine two different long time interests: @@color:brown;alternative cosmologies and clay@@. Our [[Reading group]] crystallised my interest in alternative 'cosmologies' or knowledge systems as a way to de-programme  colonial, sexist, ableist, neoliberal, classist, anthropocentric ways of thinking and being that comes as first nature to me. In particular, our reading of [[Sylvia Wynter]]'s essay [[Unsettling the Coloniality of Being/Power/Truth/Freedom: Towards the Human, After Man, Its Overrepresentation--An Argument|https://law.unimelb.edu.au/__data/assets/pdf_file/0010/2432989/Wynter-2003-Unsettling-the-Coloniality-of-Being.pdf]] gave me philosophical courage to consider Black, Indigenous and particularly Asian cosmologies as being viable alternative ways of working and living. At the same time I came into the orbit of [[MAIA Group]] and was inspired by their courage to manifest an inclusive and supportive Black worlding of a society that they want to work in.
+I am starting to combine two different long time interests: @@color:brown;alternative cosmologies and clay@@. Our [[Reading group]] crystallised my interest in alternative '[[cosmologies]]' or knowledge systems as a way to de-programme  colonial, sexist, ableist, neoliberal, classist, anthropocentric ways of thinking and being that comes as first nature to me. In particular, our reading of [[Sylvia Wynter]]'s essay [[Unsettling the Coloniality of Being/Power/Truth/Freedom: Towards the Human, After Man, Its Overrepresentation--An Argument|https://law.unimelb.edu.au/__data/assets/pdf_file/0010/2432989/Wynter-2003-Unsettling-the-Coloniality-of-Being.pdf]] gave me philosophical courage to consider Black, Indigenous and particularly Asian cosmologies as being viable alternative ways of working and living. At the same time I came into the orbit of [[MAIA Group]] and was inspired by their courage to manifest an inclusive and supportive Black worlding of a society that they want to work in.
 
 As for clay, it has been the main metaphor and methodology through which I have done all my law and art work so far. But I haven't actually touched clay properly for about 15 years ... since leaving Harrow Ceramics in 2007. The problem with metaphors is that they are literary devices and not material ones. So maybe it is time to get back to @@color:purple;an embodied epistemology@@ in order to understand the social and material world. 
 
